<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FlixDB</string>

    <!--    activity labels-->
    <string name="activity_settings_label">Settings</string>
    <string name="activity_details_label">Movie Details</string>
    <string name="activity_favorites_label">Favorites</string>

    <!--    menu options-->
    <string name="action_favorites">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_done">Done</string>

    <!--    item movie width-->
    <string name="item_movie_columnWidth">120</string>

    <!--    preferences-->
    <string name="pref_api_label">API KEY</string>
    <string name="pref_api_key" translatable="false">api_key</string>
    <string name="pref_api_default" translatable="false">Place Your API Key Here</string>
    <string name="pref_sort_order_label">Movies Order</string>
    <string name="pref_sort_order_key" translatable="false">sort_order</string>
    <string name="pref_sort_order_label_popular" translatable="false">Popular</string>
    <string name="pref_sort_order_popular">popular</string>
    <string name="pref_sort_order_label_top_rated">Top Rated</string>
    <string name="pref_sort_order_top_rated" translatable="false">top_rated</string>

    <!--    empty state values-->
    <string name="empty_state_no_internet">No Internet Connection</string>
    <string name="empty_state_api_invalid">Invalid API KEY</string>
    <string name="empty_state_api_instructions">Go to Settings -> API KEY (Developer Options)</string>
    <string name="empty_state_no_movies">No Movies Found</string>
    <string name="empty_state_no_favmovies">No Favorites Found</string>
    <string name="empty_state_icon_panda">Here\'s a panda for you!</string>
    <string name="empty_state_icon_sad">:(</string>
    <string name="empty_state_no_preview">No Available Preview</string>
    <string name="empty_state_no_review">No Available Review</string>

    <!-- detail labels-->
    <string name="detail_rate_label">Rating: <xliff:g id="rate" example="5.0">%s</xliff:g></string>
    <string name="detail_date_label">Release Date: <xliff:g id="rate" example="2020-03-05">%s</xliff:g></string>
    <string name="detail_trailer_label">Trailers: </string>
    <string name="detail_review_label">Reviews: </string>

    <string name="sync_account_type">"com.ajzamora.syncaccount"</string>
    <string name="content_authority">com.ajzamora.flixdb</string>
</resources>
