<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Developer Options">
        <EditTextPreference
            android:defaultValue="@string/pref_api_default"
            android:inputType="text"
            android:key="@string/pref_api_key"
            android:singleLine="true"
            android:title="@string/pref_api_label" />
    </PreferenceCategory>
    <PreferenceCategory android:title="View Options">
        <ListPreference
            android:defaultValue="@string/pref_sort_order_popular"
            android:entries="@array/pref_units_options"
            android:entryValues="@array/pref_units_values"
            android:key="@string/pref_sort_order_key"
            android:title="@string/pref_sort_order_label" />
    </PreferenceCategory>
</PreferenceScreen>